--- a/vietnamese.html
+++ b/vietnamese.html
@@ -61,7 +61,7 @@
                 <div class="inner">
                     <video src="videos/video2.mp4" data-autoplay autoplay muted loop playsinline></video>
                     <div class="visual_txt">
-                        <h3>Chào mừng đến với khoảnh khắc đặc biệt của<br>Thủy Trúc và Taesu</h3>
+                        <h3>Chào mừng đến với khoảnh khắc đặc biệt của Thủy Trúc và Taesu</h3>
                         <p>Hãy cùng chúng tôi viết nên câu chuyện tình yêu này</p>
                     </div>
                 </div><!-- inner -->
