--- a/vietnamese.html
+++ b/vietnamese.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="Taesu and Thuy Truc wedding site">
     <meta property="og:title" content="Taesu and Thuy Truc wedding">
     <meta property="og:url" content="https://thuytruc277.github.io/taesuthuytruc/">
-    <meta property="og:image" content="images/link.jpg">
+<meta property="og:image" content="https://raw.githubusercontent.com/thuytruc277/taesuthuytruc/594e793214272025457b3928c4d10d41de8752e3/images/link.jpg">
     <meta property="og:description" content="Taesu and Thuy Truc wedding card">
 
 
