--- a/vietnamese.html
+++ b/vietnamese.html
@@ -201,14 +201,6 @@
                                 <span>Daegu</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
-                                <img src="memories/chny_pt.jpg" alt="photo">
-                                <span>Changnyeong</span>
-                            </li><!-- swiper-slide -->
-                            <li class="swiper-slide">
-                                <img src="memories/changwon_pt.jpg" alt="photo">
-                                <span>Changwon</span>
-                            </li><!-- swiper-slide -->
-                            <li class="swiper-slide">
                                 <img src="memories/changwon_pt2.jpg" alt="photo">
                                 <span>Changwon</span>
                             </li><!-- swiper-slide -->
@@ -222,7 +214,7 @@
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
                                 <img src="memories/hapcho_pt.jpg" alt="photo">
-                                <span>Hamcheon</span>
+                                <span>Hapcheon</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
                                 <img src="memories/haman_pt.jpg" alt="photo">
@@ -263,10 +255,6 @@
                             <li class="swiper-slide">
                                 <img src="memories/jinhae.jpg" alt="photo">
                                 <span>Jinhae</span>
-                            </li><!-- swiper-slide -->
-                            <li class="swiper-slide">
-                                <img src="memories/ulhu.jpg" alt="photo">
-                                <span>Ulju</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
                                 <img src="memories/yangsan.jpg" alt="photo">
