--- a/vietnamese.html
+++ b/vietnamese.html
@@ -10,7 +10,8 @@
     <meta property="og:type" content="Taesu and Thuy Truc wedding site">
     <meta property="og:title" content="Taesu and Thuy Truc wedding">
     <meta property="og:url" content="https://thuytruc277.github.io/taesuthuytruc/">
-<meta property="og:image" content="https://raw.githubusercontent.com/thuytruc277/taesuthuytruc/594e793214272025457b3928c4d10d41de8752e3/images/link.jpg">
+    <meta property="og:image"
+        content="https://raw.githubusercontent.com/thuytruc277/taesuthuytruc/594e793214272025457b3928c4d10d41de8752e3/images/link.jpg">
     <meta property="og:description" content="Taesu and Thuy Truc wedding card">
 
 
@@ -181,11 +182,11 @@
                     <div class="swiper mem_list">
                         <ul class="swiper-wrapper">
                             <li class="swiper-slide">
-                                <img src="memories/busan_pt1.jpg" alt="room1 photo">
-                                <span>Busan</span>
+                                <img src="memories/sing2.jpg" alt="room4 photo">
+                                <span>Singapore</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
-                                <img src="memories/busan_pt2.jpg" alt="room1 photo">
+                                <img src="memories/busan_pt1.jpg" alt="room1 photo">
                                 <span>Busan</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
@@ -199,6 +200,10 @@
                             <li class="swiper-slide">
                                 <img src="memories/daegu_pt.jpg" alt="photo">
                                 <span>Daegu</span>
+                            </li><!-- swiper-slide -->
+                            <li class="swiper-slide">
+                                <img src="memories/busan_pt2.jpg" alt="room1 photo">
+                                <span>Busan</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
                                 <img src="memories/changwon_pt2.jpg" alt="photo">
@@ -234,10 +239,6 @@
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
                                 <img src="memories/sing1.jpg" alt="room4 photo">
-                                <span>Singapore</span>
-                            </li><!-- swiper-slide -->
-                            <li class="swiper-slide">
-                                <img src="memories/sing2.jpg" alt="room4 photo">
                                 <span>Singapore</span>
                             </li><!-- swiper-slide -->
                             <li class="swiper-slide">
@@ -306,7 +307,7 @@
                                 <button>Nhấp để hiển thị</button>
                                 <dl>
                                     <dt>Trần Thị Như Thủy</dt>
-                                    <dd>STK 13010001572633, Ngân hàng BIDV chi nhánh Sở giao dịch 2, TPHCM</dd>
+                                    <dd>STK</dd>
                                 </dl>
                             </div>
                             <div class="bride">
