--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta property="og:type" content="Taesu and Thuy Truc 청첩장">
   <meta property="og:title" content="Taesu and Thuy Truc wedding">
   <meta property="og:url" content="https://thuytruc277.github.io/taesuthuytruc/">
-  <meta property="og:image" content="https://raw.githubusercontent.com/thuytruc277/taesuthuytruc/594e793214272025457b3928c4d10d41de8752e3/images/link.jpg">
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/thuytruc277/taesuthuytruc/594e793214272025457b3928c4d10d41de8752e3/images/link.jpg">
   <meta property="og:description" content="Taesu and Thuy Truc wedding site>
 
   <!-- favicon -->
@@ -175,8 +176,12 @@
                 <span>부산</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
-                <img src="memories/busan_pt2.jpg" alt="room1 photo">
-                <span>부산</span>
+                <img src="memories/sing2.jpg" alt="room4 photo">
+                <span>Singapore</span>
+              </li><!-- swiper-slide -->
+              <li class="swiper-slide">
+                <img src="memories/gos.jpg" alt="photo">
+                <span>고성</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
                 <img src="memories/gangwon_pt.jpg" alt="room3 photo">
@@ -189,6 +194,10 @@
               <li class="swiper-slide">
                 <img src="memories/daegu_pt.jpg" alt="photo">
                 <span>대구</span>
+              </li><!-- swiper-slide -->
+              <li class="swiper-slide">
+                <img src="memories/busan_pt2.jpg" alt="room1 photo">
+                <span>부산</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
                 <img src="memories/changwon_pt2.jpg" alt="photo">
@@ -215,6 +224,10 @@
                 <span>군위</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
+                <img src="memories/and.jpg" alt="room4 photo">
+                <span>안동</span>
+              </li><!-- swiper-slide -->
+              <li class="swiper-slide">
                 <img src="memories/geche_pt.jpg" alt="photo">
                 <span>거제도</span>
               </li><!-- swiper-slide -->
@@ -227,8 +240,8 @@
                 <span>Singapore</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
-                <img src="memories/sing2.jpg" alt="room4 photo">
-                <span>Singapore</span>
+                <img src="memories/busan.jpg" alt="room4 photo">
+                <span>부산</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
                 <img src="memories/phuquoc.jpg" alt="room4 photo">
@@ -249,6 +262,10 @@
               <li class="swiper-slide">
                 <img src="memories/yangsan.jpg" alt="photo">
                 <span>양산</span>
+              </li><!-- swiper-slide -->
+              <li class="swiper-slide">
+                <img src="memories/busan2.jpg" alt="room4 photo">
+                <span>부산</span>
               </li><!-- swiper-slide -->
               <li class="swiper-slide">
                 <img src="memories/tong.jpg" alt="room4 photo">
